--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   web:
-    build: ./site
+    build: .
     ports:
       - "8080:80"
     container_name: mon-site-web
