--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # ou master selon ton dépôt
+      - main
 
 jobs:
   build-and-push:
@@ -17,8 +17,7 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build de l’image Docker
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest site/
 
       - name: Push de l’image sur DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest
-
